--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.7.0",
     "pg": "^8.11.3"
   }
 }
